--- a/src/styles/A4Page.css
+++ b/src/styles/A4Page.css
@@ -110,35 +110,55 @@
   padding-top: 45px; /* Space for chord mode toggle buttons */
 }
 
-/* Column separator line */
-.columns-container.columns-2 .column:first-child::after {
+/* Column separator line - very light grey, visible in screen and print */
+
+/* LTR 2 columns: line after first (left) column */
+.columns-container.columns-2:not(.rtl) .column:first-child::after {
   content: '';
   position: absolute;
   top: 0;
   right: -28px; /* Half of the gap */
   width: 1px;
   height: 100%;
-  background-color: #e8e8e8;
+  background-color: #e0e0e0;
 }
 
-.columns-container.columns-3 .column:not(:last-child)::after {
+/* LTR 3 columns: line after first and second columns */
+.columns-container.columns-3:not(.rtl) .column:not(:last-child)::after {
   content: '';
   position: absolute;
   top: 0;
   right: -15px; /* Half of the 30px gap */
   width: 1px;
   height: 100%;
-  background-color: #e8e8e8;
+  background-color: #e0e0e0;
 }
 
-.columns-container.rtl .column:first-child::after {
-  right: auto;
+/* RTL 2 columns: line to left of last (right) DOM column - visually between columns */
+.columns-container.rtl.columns-2 .column:last-child::after {
+  content: '';
+  position: absolute;
+  top: 0;
   left: -28px;
+  width: 1px;
+  height: 100%;
+  background-color: #e0e0e0;
 }
 
-.columns-container.rtl.columns-3 .column:not(:last-child)::after {
-  right: auto;
+/* RTL 3 columns: line to left of middle and right columns (not first/left) */
+.columns-container.rtl.columns-3 .column:not(:first-child)::after {
+  content: '';
+  position: absolute;
+  top: 0;
   left: -15px;
+  width: 1px;
+  height: 100%;
+  background-color: #e0e0e0;
+}
+
+/* Hide separators when toggled off */
+.columns-container.no-separators .column::after {
+  display: none !important;
 }
 
 /* Overflow indicator */
@@ -283,9 +303,9 @@
     break-inside: avoid;
   }
 
-  /* Hide column separator in print */
+  /* Keep column separator visible in print - very light grey */
   .column::after {
-    display: none !important;
+    background-color: #d8d8d8 !important;
   }
 
   .lyrics-textarea:focus {
